Enable external database host from merlin-chart (#99)
* Enable external host from merlin-chart

* Add default

* Add Values keyword

* Change default to values-e2e

* Change database host to template

* Add condition for merlin postgres

* Remove extra end

* Expand template to username and user db

* Change merlin default chart values to true

* Comment database config and add description

* Add database password secret

* Refactor logic to helper

* Remove unused helper

* Remove extra newline

* Add database host

* Combine example

--- a/charts/merlin/templates/deployment.yaml
+++ b/charts/merlin/templates/deployment.yaml
@@ -80,16 +80,13 @@ spec:
           - name: PORT
             value: "{{ .Values.merlin.service.internalPort }}"
           - name: DATABASE_HOST
-            value: {{ template "postgresql.host" . }}
+            value: {{ template "database.host" . }}
           - name: DATABASE_USER
-            value: "{{ .Values.postgresql.postgresqlUsername }}"
-          - name: DATABASE_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Release.Name }}-postgresql
-                key: postgresql-password
+            value: {{ template "database.user" . }}
           - name: DATABASE_NAME
-            value: "{{ .Values.postgresql.postgresqlDatabase }}"
+            value: {{ template "database.name" . }}
+          - name: DATABASE_PASSWORD
+            {{- include "database.password" . | indent 12 }}
           - name: REACT_APP_OAUTH_CLIENT_ID
             value: "{{ .Values.merlin.oauthClientID }}"
           - name: REACT_APP_ENVIRONMENT
