Change postgres dependency to database

--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -137,6 +137,7 @@ merlin:
 
   # Database connection used by Merlin backend when postgres is disabled
   # database:
+  #   enabled: false
   #   host: "localhost"
   #   user: "root"
   #   name: "merlin"
