--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -67,7 +67,8 @@ merlin:
     trackingURL: "http://www.example.com"
 
   # Database connection used by Merlin backend when postgres is disabled
-  # database:
+  database:
+    enabled: false
   #   host: "localhost"
   #   user: "root"
   #   name: "merlin"
