Fix project name typo on standared_transformer yaml e2e tests

--- a/python/sdk/test/transformer/standard_transformer.yaml
+++ b/python/sdk/test/transformer/standard_transformer.yaml
@@ -1,6 +1,6 @@
 transformerConfig:
   feast:
-  - project: default
+  - project: merlin
     entities:
     - name: merlin_test_driver_id
       valueType: STRING
