Add database type to merlin cloudsql

--- a/charts/merlin/templates/cloudsql-password-secret.yaml
+++ b/charts/merlin/templates/cloudsql-password-secret.yaml
@@ -1,8 +1,9 @@
-{{- if .Values.merlin.database.enabled }}
+{{- if eq .Values.merlin.database.type "cloudsql" -}}
+{{- if eq .Values.cloudsql.enabled true -}}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.merlin.database.password.secretName }}
+  name: {{ .Values.cloudsql.password.secretName }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: {{ include "merlin.name" . }}
@@ -19,5 +20,6 @@ metadata:
     gojek.com/environment: {{ .Values.merlin.environment }}
 type: Opaque
 stringData:
-  database-password: {{ .Values.merlin.database.password.value }}
-{{- end }}
+{{- printf "%s: %s" .Values.cloudsql.password.secretKey .Values.cloudsql.password.value | indent 2 -}}
+{{- end -}}
+{{- end -}}
