--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -135,16 +135,11 @@ merlin:
     # This should be the actual DNS registered
     trackingURL: "http://www.example.com"
 
-  # Database connection used by Merlin backend when postgres is disabled
-  # database:
-  #   enabled: false
-  #   host: "localhost"
-  #   user: "root"
-  #   name: "merlin"
-  #   password:
-  #     secretName: "merlin-postgrsql" 
-  #     secretKey: "database-password"
-  #     value: "password"
+  # Configuration value to select database type
+  # Option to use "postgresql" or "cloudsql" database type, by default "postgresql" is chosen
+  # Set the "enable" field to true of the database type you select (if you want to use internal database) and false of the one you don't select
+  database:
+    type: postgresql
 
 mlflow:
   image:
@@ -184,6 +179,17 @@ postgresql:
     numSynchronousReplicas: 2
     ## Replication Cluster application name. Useful for defining multiple replication policies
     applicationName: merlin
+
+# Sample CloudSQL Database configuration
+cloudqsl:
+  enable: false
+  #   host: "localhost"
+  #   user: "root"
+  #   name: "merlin"
+  #   password:
+  #     secretName: "merlin-postgrsql" 
+  #     secretKey: "database-password"
+  #     value: "password"
 
 swagger:
   enabled: true
