--- a/charts/mlflow/values.yaml
+++ b/charts/mlflow/values.yaml
@@ -71,7 +71,10 @@ ingress:
 
 postgresql:
   enabled: false
-
+  ## Option to use postgresql "internal" or "external" database type, by default internal is chosen
+  type: internal
+  ## To use an external PostgreSQL instance uncomment the line below:
+  ## postgresqlServer: ""
   postgresqlUsername: username
   postgresqlPassword: password
   postgresqlDatabase: mlflow
