--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -136,14 +136,15 @@ merlin:
     trackingURL: "http://www.example.com"
 
   # Database connection used by Merlin backend when postgres is disabled
-  # database:
-  #   host: "localhost"
-  #   user: "root"
-  #   name: "merlin"
-  #   password:
-  #     secretName: "merlin-postgrsql" 
-  #     secretKey: "database-password"
-  #     value: "password"
+  database:
+    enabled: false
+    host: "localhost"
+    user: "mlp"
+    name: "merlin"
+    password:
+      secretName: "merlin-postgrsql"
+      secretKey: database-password
+      value: "password"
 
 mlflow:
   image:
@@ -157,7 +158,7 @@ mlflow:
     postgresqlUsername: mlflow
 
 postgresql:
-  enabled: true
+  enabled: false
   resources:
     requests:
       memory: 2Gi
