--- a/charts/merlin/templates/initialization-mlflow-db.yaml
+++ b/charts/merlin/templates/initialization-mlflow-db.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.postgresql.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -28,3 +29,4 @@ stringData:
       GRANT ALL PRIVILEGES ON DATABASE {{ .Values.mlflow.postgresql.postgresqlDatabase }} TO {{ .Values.mlflow.postgresql.postgresqlUsername }};
     EOSQL
     echo "Done."
+{{- end }}
