--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -1,174 +1,182 @@
-image:
-  pullPolicy: IfNotPresent
-  registry: ghcr.io
-  repository: gojek/merlin
-  tag: 0.7.0
+merlin:
+  image:
+    pullPolicy: IfNotPresent
+    registry: ghcr.io
+    repository: gojek/merlin
+    tag: 0.7.0
 
-replicaCount: "2"
+  replicaCount: "2"
 
-resources:
-  requests:
-    cpu: "500m"
-    memory: 1Gi
-  limits:
-    cpu: "1"
-    memory: 1Gi
+  resources:
+    requests:
+      cpu: "500m"
+      memory: 1Gi
+    limits:
+      cpu: "1"
+      memory: 1Gi
 
-service:
-  externalPort: 8080
-  internalPort: 8080
+  service:
+    externalPort: 8080
+    internalPort: 8080
 
-ingress:
-  enabled: false
+  ingress:
+    enabled: false
 
-environment: dev
+  environment: dev
 
-homepage: /merlin
+  homepage: /merlin
 
-apiHost: http://merlin.mlp/v1
+  apiHost: http://merlin.mlp/v1
 
-docsURL: ""
+  docsURL: ""
 
-# Comma-separated value of Docker registries that can be chosen in deployment page
-dockerRegistries: ghcr.io/gojek,ghcr.io/your-company
+  # Comma-separated value of Docker registries that can be chosen in deployment page
+  dockerRegistries: ghcr.io/gojek,ghcr.io/your-company
 
-loggerDestinationURL: "http://yourDestinationLogger"
+  loggerDestinationURL: "http://yourDestinationLogger"
 
-mlpApi:
-  apiHost: http://mlp.mlp:8080/v1
-  # encryptionKey must be specified using --set flag.
-  # encryptionKey:
+  mlpApi:
+    apiHost: http://mlp.mlp:8080/v1
+    # encryptionKey must be specified using --set flag.
+    # encryptionKey:
 
-feastCoreApi:
-  apiHost: http://feast-core.mlp:8080/v1
+  feastCoreApi:
+    apiHost: http://feast-core.mlp:8080/v1
 
-imageBuilder:
-  clusterName: "dev"
-  buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.1"
-  baseImage: ""
-  dockerfilePath: "./Dockerfile"
-  predictionJobBuildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.1"
-  predictionJobBaseImage: "gojek/mlp/merlin-pyspark:v0.4.1"
-  predictionJobDockerfilePath: "docker/app.Dockerfile"
-  namespace: "mlp"
-  dockerRegistry: "gojek"
-  timeout: "30m"
-  contextSubPath: "python/pyfunc-server"
-  predictionJobContextSubPath: "python/batch-predictor"
+  imageBuilder:
+    clusterName: "dev"
+    buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.1"
+    baseImage: ""
+    dockerfilePath: "./Dockerfile"
+    predictionJobBuildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.1"
+    predictionJobBaseImage: "gojek/mlp/merlin-pyspark:v0.4.1"
+    predictionJobDockerfilePath: "docker/app.Dockerfile"
+    namespace: "mlp"
+    dockerRegistry: "gojek"
+    timeout: "30m"
+    contextSubPath: "python/pyfunc-server"
+    predictionJobContextSubPath: "python/batch-predictor"
 
-vault:
-  secretName: "vault-secret" # Must be bootstraped first.
+  vault:
+    secretName: "vault-secret" # Must be bootstraped first.
 
-gitlab:
-  baseURL: https://gitlab.com/
-  # GitLab token must be specified using --set flag.
-  # token:
-  dashboardRepository: data-science/slo-specs
-  dashboardBranch: master
-  alertRepository: lens/artillery/datascience
-  alertBranch: master
+  gitlab:
+    baseURL: https://gitlab.com/
+    # GitLab token must be specified using --set flag.
+    # token:
+    dashboardRepository: data-science/slo-specs
+    dashboardBranch: master
+    alertRepository: lens/artillery/datascience
+    alertBranch: master
 
-alert:
-  enabled: false
+  alert:
+    enabled: false
 
-monitoring:
-  enabled: false
-  # baseURL: ""
-  # jobBaseURL: ""
+  monitoring:
+    enabled: false
+    # baseURL: ""
+    # jobBaseURL: ""
 
-warden:
-  apiHost: ""
+  warden:
+    apiHost: ""
 
-transformer:
-  feast:
-    servingURL: serving.feast.dev
-    coreURL: core.feast.dev
-  image: merlin-transformer:1.0.0
+  transformer:
+    feast:
+      servingURL: serving.feast.dev
+      coreURL: core.feast.dev
+    image: merlin-transformer:1.0.0
 
-# Google service account used to access GCP's resources.
-#
-# gcpServiceAccount:
-#   secretName: merlin-secret
-#   secretKey: service-account.json
+  # Google service account used to access GCP's resources.
+  #
+  # gcpServiceAccount:
+  #   secretName: merlin-secret
+  #   secretKey: service-account.json
 
-environmentConfigs:
-  - name: "id-dev"
-    is_default: true
-    cluster: "dev"
-    region: "id"
-    gcp_project: "gcp-project"
-    deployment_timeout: "10m"
-    namespace_timeout: "2m"
-    max_cpu: "8"
-    max_memory: "8Gi"
-    queue_resource_percentage: "20"
-    is_prediction_job_enabled: true
-    is_default_prediction_job: true
-    default_prediction_job_config:
-      executor_replica: 3
-      driver_cpu_request: "2"
-      driver_memory_request: "2Gi"
-      executor_cpu_request: "2"
-      executor_memory_request: "2Gi"
-    default_deployment_config:
-      min_replica: 0
-      max_replica: 1
-      cpu_request: "500m"
-      memory_request: "500Mi"
-    default_transformer_config:
-      min_replica: 0
-      max_replica: 1
-      cpu_request: "500m"
-      memory_request: "500Mi"
+  environmentConfigs:
+    - name: "id-dev"
+      is_default: true
+      cluster: "dev"
+      region: "id"
+      gcp_project: "gcp-project"
+      deployment_timeout: "10m"
+      namespace_timeout: "2m"
+      max_cpu: "8"
+      max_memory: "8Gi"
+      queue_resource_percentage: "20"
+      is_prediction_job_enabled: true
+      is_default_prediction_job: true
+      default_prediction_job_config:
+        executor_replica: 3
+        driver_cpu_request: "2"
+        driver_memory_request: "2Gi"
+        executor_cpu_request: "2"
+        executor_memory_request: "2Gi"
+      default_deployment_config:
+        min_replica: 0
+        max_replica: 1
+        cpu_request: "500m"
+        memory_request: "500Mi"
+      default_transformer_config:
+        min_replica: 0
+        max_replica: 1
+        cpu_request: "500m"
+        memory_request: "500Mi"
 
-sentry:
-  enabled: false
-  dsn: ""
+  sentry:
+    enabled: false
+    dsn: ""
 
-newrelic:
-  enabled: false
-  appname: "merlin-api-dev"
-  licenseSecretName: "newrelic-license-secret"
+  newrelic:
+    enabled: false
+    appname: "merlin-api-dev"
+    licenseSecretName: "newrelic-license-secret"
 
-authorization:
-  enabled: true
-  serverUrl: http://mlp-authorization-keto
+  authorization:
+    enabled: true
+    serverUrl: http://mlp-authorization-keto
 
-encryption:
-  key: "password"
+  encryption:
+    key: "password"
+
+  mlflow:
+    # This should be the actual DNS registered
+    trackingURL: "http://www.example.com"
 
 postgresql:
-enabled: true
-resources:
-  requests:
-    memory: 2Gi
-    cpu: 500m
-persistence:
-  size: 100Gi
-## To use an external PostgreSQL instance uncomment the line below:
-# postgresqlHost: ""
-postgresqlUsername: merlin
-postgresqlDatabase: merlin
-## Set this to your merlin postgresql Password
-# The password secret will be created using this password
-# postgresqlPassword: ""
-metrics:
   enabled: true
-  serviceMonitor:
+
+merlinPostgresql:
+  enabled: true
+  resources:
+    requests:
+      memory: 2Gi
+      cpu: 500m
+  persistence:
+    size: 100Gi
+  ## To use an external PostgreSQL instance uncomment the line below:
+  # postgresqlHost: ""
+  postgresqlUsername: merlin
+  postgresqlDatabase: merlin
+  ## Set this to your merlin postgresql Password
+  # The password secret will be created using this password
+  # postgresqlPassword: ""
+  metrics:
     enabled: true
-replication:
-  enabled: true
-  user: repl_user
-  password: repl_password
-  slaveReplicas: 2
-  ## Set synchronous commit mode: on, off, remote_apply, remote_write and local
-  ## ref: https://www.postgresql.org/docs/9.6/runtime-config-wal.html#GUC-WAL-LEVEL
-  synchronousCommit: "on"
-  ## From the number of `slaveReplicas` defined above, set the number of those that will have synchronous replication
-  ## NOTE: It cannot be > slaveReplicas
-  numSynchronousReplicas: 2
-  ## Replication Cluster application name. Useful for defining multiple replication policies
-  applicationName: merlin
+    serviceMonitor:
+      enabled: true
+  replication:
+    enabled: true
+    user: repl_user
+    password: repl_password
+    slaveReplicas: 2
+    ## Set synchronous commit mode: on, off, remote_apply, remote_write and local
+    ## ref: https://www.postgresql.org/docs/9.6/runtime-config-wal.html#GUC-WAL-LEVEL
+    synchronousCommit: "on"
+    ## From the number of `slaveReplicas` defined above, set the number of those that will have synchronous replication
+    ## NOTE: It cannot be > slaveReplicas
+    numSynchronousReplicas: 2
+    ## Replication Cluster application name. Useful for defining multiple replication policies
+    applicationName: merlin
 
 mlflow:
   ## mlflow container name
@@ -204,28 +212,6 @@ mlflow:
       memory: "512Mi"
     limits:
       memory: "2048Mi"
-
-  postgresql:
-    enabled: false
-    ## To use an external PostgreSQL instance uncomment the line below:
-    ## postgresqlHost: ""
-    postgresqlUsername: username
-    postgresqlPassword: password
-    postgresqlDatabase: mlflow
-    ## Set this to your mlflow postgresql Password
-    # The password secret will be created using this password
-    # postgresqlPassword: ""
-  
-    replicaCount: 1
-  
-    resources:
-      requests:
-        cpu: 500m
-        memory: 512Mi
-  
-    persistence:
-      enabled: true
-      size: 100Gi
 
   ## The backend store is where MLflow server stores experiment
   ## and run metadata as well as params, metrics, and tags for runs.
@@ -277,6 +263,28 @@ mlflow:
     # team: unknown
     # stream: unknown
     # orchestrator: unknown
+
+mlflowPostgresql:
+    enabled: true
+    ## To use an external PostgreSQL instance uncomment the line below:
+    ## postgresqlHost: ""
+    postgresqlUsername: username
+    postgresqlPassword: password
+    postgresqlDatabase: mlflow
+    ## Set this to your mlflow postgresql Password
+    # The password secret will be created using this password
+    # postgresqlPassword: ""
+  
+    replicaCount: 1
+  
+    resources:
+      requests:
+        cpu: 500m
+        memory: 512Mi
+  
+    persistence:
+      enabled: true
+      size: 100Gi
 
 swagger:
   enabled: true
