Fix mlflow postgresql config

--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -88,6 +88,8 @@ mlflow:
 
 mlflow-postgresql:
   enabled: true
+  persistence:
+    enabled: false
   postgresqlUsername: mlflow
   postgresqlDatabase: mlflow
   postgresqlPassword: mlflow
