Change postgres helm Chart to allow external database (#103)
* Change postgres dependency to database

* Add database enabled false to merlin end to end test

* Add database type to merlin cloudsql

* Revert to last working e2e test

* Enable external server capabilities

* Remove type from database

* Rename postgresl server to postgresql host

* Add postgres enable condition

* Add postgresql password comment

* Combine mlflow and merlin

* Re-run helm dep up

* Add database

* Refactor merlin and mlflow to run multi database

* Add e2e and fix identation

* Use database alias

* Enable database secret and fix end to end test values

* Fix mlflow postgresql config

Co-authored-by: Julio Anthony Leonard <julio.leonard@gojek.com>

--- a/charts/merlin/requirements.yaml
+++ b/charts/merlin/requirements.yaml
@@ -2,8 +2,10 @@ dependencies:
   - name: postgresql
     repository: "@stable"
     version: 7.0.0
-    condition: postgresql.enabled
-  - name: mlflow
-    repository: "file://../mlflow"
-    version: 0.4.1
-    alias: mlflow
+    alias: merlin-postgresql
+    condition: merlin-postgresql.enabled
+  - name: postgresql
+    repository: "@stable"
+    version: 7.0.0
+    alias: mlflow-postgresql
+    condition: mlflow-postgresql.enabled
