--- a/charts/merlin/templates/merlin-database-secret.yaml
+++ b/charts/merlin/templates/merlin-database-secret.yaml
@@ -1,8 +1,8 @@
-{{- if not .Values.postgresql.enabled }}
+{{- if not (index .Values "merlin-postgresql" "enabled") }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.merlin.database.password.secretName }}
+  name: {{ .Release.Name }}-merlin-postgresql
   namespace: {{ .Release.Namespace }}
   labels:
     app: {{ include "merlin.name" . }}
@@ -19,5 +19,5 @@ metadata:
     gojek.com/environment: {{ .Values.merlin.environment }}
 type: Opaque
 stringData:
-  database-password: {{ .Values.merlin.database.password.value }}
+  postgresql-password: {{ index .Values "merlin-postgresql" "postgresqlPassword" }}
 {{- end }}
