Add job consumer function for prediction job deployment,add unit test and integration test

--- a/.env.sample
+++ b/.env.sample
@@ -54,3 +54,4 @@ MONITORING_DASHBOARD_JOB_BASE_URL=http://monitoring.dev/batch-job-dashboard
 MLP_API_ENCRYPTION_KEY=password
 
 # MLFLOW_TRACKING_URL=
+NUM_OF_WORKERS=1
