--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -35,6 +35,9 @@ merlin:
 
   loggerDestinationURL: "http://yourDestinationLogger"
 
+  queue:
+    numOfWorkers: 1
+
   mlpApi:
     apiHost: http://mlp.mlp:8080/v1
     # encryptionKey must be specified using --set flag.
