--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -143,6 +143,10 @@ spec:
             value: "{{ .Values.merlin.transformer.feast.servingURL }}"
           - name: FEAST_CORE_URL
             value: "{{ .Values.merlin.transformer.feast.coreURL }}"
+          - name: FEAST_CORE_AUTH_AUDIENCE
+            value: "{{ .Values.merlin.transformer.feast.coreAuthAudience }}"
+          - name: FEAST_SERVING_AUTH_AUDIENCE
+            value: "{{ .Values.merlin.transformer.feast.servingAuthAudience }}"
           - name: STANDARD_TRANSFORMER_IMAGE_NAME
             value: "{{ .Values.merlin.transformer.image }}"
           - name: VAULT_ADDRESS
