Support authentication when calling feast (#110)
* WIP

* Add dispatcher and worker

* WIP

* Add job consumer function for prediction job deployment,add unit test and integration test

* Fix dockerfile for merlin

* Fix issue when deploying model with logger enabled, due to empty logger URL

* Mark endpoint/batch job as failed when failed to enqueue job

* Refactor code and add retryable error

* Remove sync.Mutex and code that use it

* Remove dead code and change structure of file

* Change default number of workers into 2

* Add authorization header for calling feast, and support authentication for core feast client

* Add toggle to enable/disable feast auth, removing auth for serving

Co-authored-by: Tio Pramayudi <tio.pramayudi@go-jek.com>
Co-authored-by: Tio Pramayudi <tio.pramayudi@gojek.com>

--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -143,6 +143,10 @@ spec:
             value: "{{ .Values.merlin.transformer.feast.servingURL }}"
           - name: FEAST_CORE_URL
             value: "{{ .Values.merlin.transformer.feast.coreURL }}"
+          - name: FEAST_CORE_AUTH_AUDIENCE
+            value: "{{ .Values.merlin.transformer.feast.coreAuthAudience }}"
+          - name: FEAST_AUTH_ENABLED
+            value: "{{ .Values.merlin.transformer.feast.authEnabled }}"
           - name: STANDARD_TRANSFORMER_IMAGE_NAME
             value: "{{ .Values.merlin.transformer.image }}"
           - name: VAULT_ADDRESS
