--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -87,6 +87,8 @@ merlin:
     feast:
       servingURL: serving.feast.dev
       coreURL: core.feast.dev
+      coreAuthAudience: core.feast.dev
+      authEnabled: false
     image: merlin-transformer:1.0.0
 
   # Google service account used to access GCP's resources.
