--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@elastic/datemath": "5.0.3",
     "@elastic/eui": "31.10.0",
-    "@gojek/mlp-ui": "1.3.1",
+    "@gojek/mlp-ui": "1.4.1",
     "@reach/router": "1.3.3",
     "@sentry/browser": "5.15.5",
     "js-yaml": "^4.0.0",
@@ -19,7 +19,8 @@
     "react-ellipsis-text": "^1.2.1",
     "react-lazylog": "^4.5.1",
     "react-scripts": "3.4.1",
-    "use-query-params": "^0.6.0"
+    "use-query-params": "^0.6.0",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@types/react-dom": "^16.9.8",
