--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "@gojek/mlp-ui": "1.4.1",
     "@reach/router": "1.3.3",
     "@sentry/browser": "5.15.5",
+    "dagre-d3-react": "^0.2.4",
     "js-yaml": "^4.0.0",
     "moment": "2.25.3",
     "object-assign-deep": "0.4.0",
