--- a/api/pkg/transformer/pipeline/testdata/valid_simple_postprocess.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_simple_postprocess.yaml
@@ -11,7 +11,8 @@ transformerConfig:
       - jsonOutput:
           jsonTemplate:
             fields:
-              instances:
+              - fieldName: instances
                 fromTable:
                   tableName: "entity_table"
                   format: "SPLIT"
+                
