--- a/api/pkg/transformer/pipeline/testdata/valid_table_transform_preprocess.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_table_transform_preprocess.yaml
@@ -29,7 +29,7 @@ transformerConfig:
       - jsonOutput:
           jsonTemplate:
             fields:
-              instances:
+              - fieldName: instances
                 fromTable:
                   tableName: transformed_driver_table
                   format: "SPLIT"
