--- a/ui/package.json
+++ b/ui/package.json
@@ -47,7 +47,7 @@
     "eject": "react-scripts eject",
     "version-from-git": "../scripts/vertagen/vertagen.sh"
   },
-  "proxy": "http://localhost:8080/v1",
+  "proxy": "http://console.d.ai.golabs.io/v1",
   "eslintConfig": {
     "extends": "react-app"
   },
