--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "merlin-ui",
-  "version": "0.7.0",
+  "version": "0.12.0",
   "private": true,
   "homepage": "/merlin",
   "dependencies": {
@@ -47,7 +47,7 @@
     "eject": "react-scripts eject",
     "version-from-git": "../scripts/vertagen/vertagen.sh"
   },
-  "proxy": "http://console.d.ai.golabs.io/v1",
+  "proxy": "http://localhost:8080/v1",
   "eslintConfig": {
     "extends": "react-app"
   },
